add runtime context to annotation manager & fix logging's tests being broken caused by java.version env being 0